# data-serializer-benchmark

./: README.md  bench.py  pyproject.toml
