[project]
name = ""
version = ""
description = ""
authors = [
    {name = "aprilahijriyan", email = "hijriyan23@gmail.com"},
]
dependencies = [
    "msgspec>=0.12.0",
    "msgpack>=1.0.4",
    "orjson>=3.8.5",
]
requires-python = ">=3.9"
license = {text = ""}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
